force-app/main/default/objects/Lead/fields/Last_Sales_Connect__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Connect__c</fullName>
    <description>This is a DLRS field that will be used to calculate the rollup field Last Sales Connect on account</description>
    <label>Last Sales Connect Task</label>
    <type>Date</type>
</CustomField>