force-app/main/default/objects/Lead/fields/Last_Sales_Connect_Event__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Connect_Event__c</fullName>
    <description>A DLRS field for meetings used to calculate an Accounts &quot;Last Sales Connect&quot; for commissions reporting in the LinkedIn Pilot.  Excludes any event where &quot;Meeting Type&quot; = &quot;Oyster Demo Call&quot; to suppress meetings booked via the LinkedIn Partnership.</description>
    <label>Last Sales Connect Event</label>
    <type>Date</type>
</CustomField>