force-app/main/default/objects/Lead/fields/Last_Sales_Connect_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Connect_Formula__c</fullName>
    <formula>IF(
    ISBLANK(Last_Sales_Connect__c) &amp;&amp; ISBLANK(Last_Sales_Connect_Event__c), 
    NULL, 
    IF(
        ISBLANK(Last_Sales_Connect__c), 
        Last_Sales_Connect_Event__c, 
        IF(
            ISBLANK(Last_Sales_Connect_Event__c), 
            Last_Sales_Connect__c, 
            IF(
                Last_Sales_Connect__c &gt; Last_Sales_Connect_Event__c, 
                Last_Sales_Connect__c, 
                Last_Sales_Connect_Event__c
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Sales Connect Formula</label>
    <type>Date</type>
</CustomField>