force-app/main/default/objects/Lead/fields/Last_Sales_Task__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Task__c</fullName>
    <description>Populated by DLRS</description>
    <label>Last Sales Task</label>
    <type>Date</type>
</CustomField>