force-app/main/default/objects/Lead/fields/Last_utm_source__c.field-meta.xml
<CustomField>
    <fullName>Last_utm_source__c</fullName>
    <label>Last utm_source</label>
    <type>TextArea</type>
</CustomField>