force-app/main/default/objects/Lead/fields/Last_utm_term__c.field-meta.xml
<CustomField>
    <fullName>Last_utm_term__c</fullName>
    <label>Last utm_term</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>