force-app/main/default/objects/Lead/fields/Lead_ID_18_Digit__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID_18_Digit__c</fullName>
    <description>Salesforce.com ID - 18 Digit version</description>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead ID (18 Digit)</label>
    <type>Text</type>
</CustomField>