force-app/main/default/objects/Lead/fields/Lead_Objective__c.field-meta.xml
<CustomField>
    <fullName>Lead_Objective__c</fullName>
    <label>Lead Objective</label>
    <length>255</length>
    <type>Text</type>
</CustomField>