force-app/main/default/objects/Lead/fields/Lead_Power_of_One__c.field-meta.xml
<CustomField>
    <fullName>Lead_Power_of_One__c</fullName>
    <description>Used for counting unique records in reports.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead (Power of One)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>