force-app/main/default/objects/Lead/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <description>Identifies a more specific source when Lead_Source is a category</description>
    <label>Lead Source Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>