force-app/main/default/objects/Lead/fields/Lead_Source_Group__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Group__c</fullName>
    <description>Checks the Lead Source and matches it to a Lead Source Group of either Inbound, Outbound or Partner.  If not filled, result is null.</description>
    <formula>IF(ISPICKVAL(LeadSource,&quot;&quot;), &quot;N/A&quot;,
Case(LeadSource,

&apos;DIRECT_TRAFFIC&apos;, &apos;Inbound&apos;,
&apos;Native_Form_Lead&apos;, &apos;Inbound&apos;,
&apos;PAID_SEARCH&apos;, &apos;Inbound&apos;,
&apos;Self_Service_Signup&apos;, &apos;Inbound&apos;,
&apos;Webflow_Employer_Signup&apos;, &apos;Inbound&apos;,
&apos;Webflow_Platform_Signup&apos;, &apos;Inbound&apos;,
&apos;Webflow_Remote_Ready_Signup&apos;, &apos;Inbound&apos;,
&apos;Webflow_Signup_Footer&apos;, &apos;Inbound&apos;,
&apos;Webflow_Signup_popover&apos;, &apos;Inbound&apos;,
&apos;Direct Traffic&apos;, &apos;Inbound&apos;,
&apos;Email Marketing&apos;, &apos;Inbound&apos;,
&apos;Event&apos;, &apos;Inbound&apos;,
&apos;External Referral&apos;, &apos;Inbound&apos;,
&apos;Inbound Other&apos;, &apos;Inbound&apos;,
&apos;Organic Search&apos;, &apos;Inbound&apos;,
&apos;Organic Social&apos;, &apos;Inbound&apos;,
&apos;Other Campaigns&apos;, &apos;Inbound&apos;,
&apos;Oyster Academy&apos;, &apos;Inbound&apos;,
&apos;Oyster Employee Referral&apos;, &apos;Inbound&apos;,
&apos;Qualified_Chat&apos;, &apos;Inbound&apos;,
&apos;Referrals&apos;, &apos;Inbound&apos;,
&apos;Startup Offer Inbound&apos;, &apos;Inbound&apos;,
&apos;Webflow_Employee_Signup&apos;, &apos;Inbound&apos;,
&apos;Webinar&apos;, &apos;Inbound&apos;,
&apos;Video&apos;, &apos;Inbound&apos;,
&apos;Display&apos;, &apos;Inbound&apos;,
&apos;Paid Search&apos;, &apos;Inbound&apos;,
&apos;Paid Social&apos;, &apos;Inbound&apos;,

&apos;Clearbit Created Contact&apos;, &apos;Outbound&apos;,
&apos;G2 Buyer Intent&apos;, &apos;Outbound&apos;,
&apos;AE Outbound&apos;, &apos;Outbound&apos;,
&apos;Outbound AM&apos;, &apos;Outbound&apos;,
&apos;Outbound AE&apos;, &apos;Outbound&apos;,
&apos;BDR Outbound&apos;, &apos;Outbound&apos;,
&apos;Cognism&apos;, &apos;Outbound&apos;,
&apos;Growthonics&apos;, &apos;Outbound&apos;,
&apos;List&apos;, &apos;Outbound&apos;,
&apos;Lusha&apos;, &apos;Outbound&apos;,
&apos;Offline Sources&apos;, &apos;Outbound&apos;,
&apos;Operatix&apos;, &apos;Outbound&apos;,
&apos;Outbound BDR&apos;, &apos;Outbound&apos;,
&apos;Zoominfo&apos;, &apos;Outbound&apos;,
&apos;Clay&apos;, &apos;Outbound&apos;,

&apos;Affiliate&apos;, &apos;Inbound&apos;,
&apos;PartnerStack&apos;,&apos;Partner&apos;,
&apos;Partner - Other&apos;,&apos;Partner&apos;,
&apos;Partner Referral&apos;, &apos;Partner&apos;,
&apos;Partner&apos;, &apos;Partner&apos;,
&apos;Webflow_Partner_Signup&apos;,&apos;Partner&apos;,
&apos;Partner Traffic&apos;, &apos;Partner&apos;,
&apos;Partnerships&apos;, &apos;Partner&apos;,
&apos;Ecosystem Partners&apos;, &apos;Partner&apos;,
&apos;VC Referral&apos;, &apos;Partner&apos;,
&apos;Business Services Partner&apos;,&apos;Partner&apos;,
&apos;Referral Program&apos;, &apos;Partner&apos;,
&apos;Partner Outbound&apos;, &apos;Partner&apos;,
&apos;Partner Inbound&apos;, &apos;Partner&apos;,
&quot;&quot;
)
)</formula>
    <label>Lead Source Group</label>
    <type>Text</type>
</CustomField>