force-app/main/default/objects/Lead/fields/leadassist__Round_Robin_Info__c.field-meta.xml
<CustomField>
    <fullName>leadassist__Round_Robin_Info__c</fullName>
    <inlineHelpText>What did SRR do? Bypassed: means SRR didn&apos;t run, the Use_Round_Robin value was probably not set to TRUE.  RUN: SRR matching starts. NMR: No Match Rules. MER: Matched Existing Record. ES: Email notification sent.</inlineHelpText>
    <label>Round Robin Info</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>