force-app/main/default/objects/Lead/fields/leadassist__sendEmailNotificationToLeadOwner__c.field-meta.xml
<CustomField>
    <fullName>leadassist__sendEmailNotificationToLeadOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by SRR to know when to send email notifications to the Lead Owner.  Not to be added to a layout.</description>
    <label>sendEmailNotificationToLeadOwner</label>
    <type>Checkbox</type>
</CustomField>