force-app/main/default/objects/Lead/fields/leadassist__SRRIndex__c.field-meta.xml
<CustomField>
    <fullName>leadassist__SRRIndex__c</fullName>
    <description>System field used by SuperRoundRobin</description>
    <label>SRRIndex</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>