force-app/main/default/objects/Lead/fields/leadassist__Use_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>leadassist__Use_Round_Robin__c</fullName>
    <description>Determines whether Super Round Robin is triggered to do lead assignment. Replaces Round_Robin__c from Version 3.</description>
    <inlineHelpText>Determines whether Super Round Robin is triggered to do lead assignment.  Set to TRUE for SRR to run on lead creation/update.  Set to FALSE to ignore Round Robin assignment. Will automatically revert to ASSIGNED if successful match leads to assignment, otherwise will revert to NOMATCH</inlineHelpText>
    <label>Use Round Robin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
                <default>true</default>
                <label>FALSE</label>
            </value>
            <value>
                <fullName>ASSIGNED</fullName>
            </value>
            <value>
                <fullName>NOMATCH</fullName>
            </value>
            <value>
                <fullName>QUEUED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>