force-app/main/default/objects/Lead/fields/LeanData_Reassign_to_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>LeanData_Reassign_to_Account_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field set in the LeanData lead router, helping align the Account owner within RoE with the Lead Ownership.</description>
    <label>LeanData Reassign to Account Owner</label>
    <type>Checkbox</type>
</CustomField>