force-app/main/default/objects/Lead/fields/LeanData_Reassign_to_the_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>LeanData_Reassign_to_the_Lead_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by LeanData to mark when an Account should be aligned with Lead Ownership. HubSpot workflow aligns the ownership and clears the value.</description>
    <label>LeanData Reassign to the Lead Owner</label>
    <type>Checkbox</type>
</CustomField>