force-app/main/default/objects/Lead/fields/Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Stage__c</fullName>
    <description>To track our top sales funnel</description>
    <label>Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>subscriber</fullName>
                <label>Subscriber</label>
            </value>
            <value>
                <fullName>lead</fullName>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>marketingqualifiedlead</fullName>
                <label>Marketing Qualified Lead</label>
            </value>
            <value>
                <fullName>Sales Contacted Lead</fullName>
            </value>
            <value>
                <fullName>salesqualifiedlead</fullName>
                <label>Sales Qualified Lead</label>
            </value>
            <value>
                <fullName>opportunity</fullName>
                <label>Opportunity</label>
            </value>
            <value>
                <fullName>customer</fullName>
                <label>Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>