force-app/main/default/objects/Lead/fields/Lifecycle_Stage_Test__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Stage_Test__c</fullName>
    <label>Lifecycle Stage Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscriber</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Marketing Qualified Lead</fullName>
            </value>
            <value>
                <fullName>Sales Contacted Lead</fullName>
            </value>
            <value>
                <fullName>Sales Qualified Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>