force-app/main/default/objects/Lead/fields/LinkedIn_Ad_ID__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Ad_ID__c</fullName>
    <description>Synced from HubSpot, value of the LinkedIn Ad Id. Originally set from LinkedIn through Zapier (https://zapier.com/app/assets/zaps?context=7049137&amp;search=linkedin)</description>
    <label>LinkedIn Ad ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>