force-app/main/default/objects/Lead/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <description>Enriched from Clearbit</description>
    <inlineHelpText>Clearbit</inlineHelpText>
    <label>LinkedIn URL</label>
    <type>TextArea</type>
</CustomField>