force-app/main/default/objects/Lead/fields/Matched_Account_Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Activated_Date__c</fullName>
    <formula>AccountId__r.Account_Activated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account: Activated Date</label>
    <type>Date</type>
</CustomField>