force-app/main/default/objects/Lead/fields/Matched_Account_Actively_Worked__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Actively_Worked__c</fullName>
    <formula>AccountId__r.Actively_Worked__c</formula>
    <label>Matched Account: Actively Worked?</label>
    <type>Checkbox</type>
</CustomField>