force-app/main/default/objects/Lead/fields/Matched_Account_Current_Customer__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Current_Customer__c</fullName>
    <formula>AccountId__r.Won_Opps__c  &gt;= 1 || 
ISPICKVAL(AccountId__r.Type, &apos;Customer&apos;)||  
NOT(ISBLANK(AccountId__r.Customer_First_Assisted_Setup_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account: Current Customer</label>
    <type>Checkbox</type>
</CustomField>