force-app/main/default/objects/Lead/fields/Matched_Account_Open_Opps__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Open_Opps__c</fullName>
    <formula>AccountId__r.Open_Opps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account: #Open Opps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>