force-app/main/default/objects/Lead/fields/Matched_Account_Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Owner_Profile__c</fullName>
    <formula>AccountId__r.Owner_Profile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account: Owner Profile</label>
    <type>Text</type>
</CustomField>