force-app/main/default/objects/Lead/fields/Meeting_Set__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Set__c</fullName>
    <label>Meeting Set</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Meeting_Set</valueSetName>
    </valueSet>
</CustomField>