force-app/main/default/objects/Lead/fields/Meeting_Type_CP__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type_CP__c</fullName>
    <description>The Meeting Type booked from Chli Piper</description>
    <label>Meeting Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>