force-app/main/default/objects/Lead/fields/MK_Customer_Fit_Segment__c.field-meta.xml
<CustomField>
    <fullName>MK_Customer_Fit_Segment__c</fullName>
    <description>Madkudu customer fit segment (very good, good, medium, low)</description>
    <label>MK Customer Fit Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>low</fullName>
            </value>
            <value>
                <fullName>medium</fullName>
            </value>
            <value>
                <fullName>good</fullName>
            </value>
            <value>
                <fullName>very good</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>