force-app/main/default/objects/Lead/fields/MK_Likelihood_to_Buy_Segment__c.field-meta.xml
<CustomField>
    <fullName>MK_Likelihood_to_Buy_Segment__c</fullName>
    <description>Madkudu likelihood to buy segment (very high, high, medium, low)</description>
    <label>MK Likelihood to Buy Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>low</fullName>
            </value>
            <value>
                <fullName>medium</fullName>
            </value>
            <value>
                <fullName>high</fullName>
            </value>
            <value>
                <fullName>very high</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>