force-app/main/default/objects/Lead/fields/Most_Recent_HS_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_HS_Form_Submitted__c</fullName>
    <description>Set in HubSpot on form submission, stores the name of the last form submitted.</description>
    <inlineHelpText>Set in HubSpot on form submission, stores the name of the last form submitted.</inlineHelpText>
    <label>Most Recent HS Form Submitted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>