force-app/main/default/objects/Lead/fields/MQL__c.field-meta.xml
<CustomField>
    <fullName>MQL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates if this is an MQL generated by marketing/partnerships</description>
    <label>MQL</label>
    <type>Checkbox</type>
</CustomField>