force-app/main/default/objects/Lead/fields/No_Show_CP__c.field-meta.xml
<CustomField>
    <fullName>No_Show_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prospect didn&apos;t show up to meeting booked through Chili Piper</description>
    <inlineHelpText>Prospect didn&apos;t show up to meeting booked through Chili Piper</inlineHelpText>
    <label>No Show</label>
    <type>Checkbox</type>
</CustomField>