force-app/main/default/objects/Lead/fields/Outside_of_HQ_Country__c.field-meta.xml
<CustomField>
    <fullName>Outside_of_HQ_Country__c</fullName>
    <formula>NOT(
    AND(
        ISBLANK(Person_Country__c),
        AccountId__r.BillingCountry=Person_Country__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outside of HQ Country</label>
    <type>Checkbox</type>
</CustomField>