force-app/main/default/objects/Lead/fields/Owned_by_BDR__c.field-meta.xml
<CustomField>
    <fullName>Owned_by_BDR__c</fullName>
    <description>For use in Lead Auto Delay Assignment process in process builder. Allows for the lead owner role criteria check before assigning to round robin. Created at request of Natasha.</description>
    <formula>IF (
    CONTAINS(Owner:User.UserRole.Name, &quot;BDR&quot;),
    true,
    false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically checked if Owner is BDR</inlineHelpText>
    <label>Owned by BDR</label>
    <type>Checkbox</type>
</CustomField>