force-app/main/default/objects/Lead/fields/Owner_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Owner_Changed_Date__c</fullName>
    <description>HubSpot calculated owner change date and time.</description>
    <label>Owner Changed Date</label>
    <type>DateTime</type>
</CustomField>