force-app/main/default/objects/Lead/fields/OysterHR_Platform_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>OysterHR_Platform_Account_Name__c</fullName>
    <description>Updated from Platform via manual import - company name of the user.</description>
    <label>OysterHR Platform Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>