force-app/main/default/objects/Lead/fields/OysterHR_Platform_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>OysterHR_Platform_Org_ID__c</fullName>
    <label>OysterHR Platform Org ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>