force-app/main/default/objects/Lead/fields/OysterHR_Platform_User_ID__c.field-meta.xml
<CustomField>
    <fullName>OysterHR_Platform_User_ID__c</fullName>
    <description>Sent from Census to Salesforce - OysterHR Platform user ID.</description>
    <label>OysterHR Platform User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>