force-app/main/default/objects/Lead/fields/OysterHR_Platform_User_Role__c.field-meta.xml
<CustomField>
    <fullName>OysterHR_Platform_User_Role__c</fullName>
    <description>Set in Platform user role - updated by manual import.</description>
    <label>OysterHR Platform User Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>