force-app/main/default/objects/Lead/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to document which partner referred the lead</description>
    <inlineHelpText>To be filled in by Partner Managers only.</inlineHelpText>
    <label>Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Id</field>
            <operation>equals</operation>
            <value>0124v000001Nh1M</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>