force-app/main/default/objects/Lead/fields/Partner_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Company_Name__c</fullName>
    <description>Referring VC partner, set by the prospect on our inbound demo request form</description>
    <inlineHelpText>Referring VC partner, set by the prospect on our inbound demo request form</inlineHelpText>
    <label>Partner Name</label>
    <type>TextArea</type>
</CustomField>