force-app/main/default/objects/Lead/fields/Partner_Program__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program__c</fullName>
    <label>Partner Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Capital</fullName>
            </value>
            <value>
                <fullName>Direct to Consumer</fullName>
            </value>
            <value>
                <fullName>Industry Organization</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PEO/Payroll</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Talent</fullName>
            </value>
            <value>
                <fullName>Worktech</fullName>
            </value>
            <value>
                <fullName>Venture</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
                <isActive>false</isActive>
                <label>Benefits</label>
            </value>
            <value>
                <fullName>Consulting &amp; Advisory</fullName>
                <isActive>false</isActive>
                <label>Consulting &amp; Advisory</label>
            </value>
            <value>
                <fullName>Finance &amp; ERP</fullName>
                <isActive>false</isActive>
                <label>Finance &amp; ERP</label>
            </value>
            <value>
                <fullName>HR StacK</fullName>
                <isActive>false</isActive>
                <label>HR StacK</label>
            </value>
            <value>
                <fullName>Operations &amp; Tools</fullName>
                <isActive>false</isActive>
                <label>Operations &amp; Tools</label>
            </value>
            <value>
                <fullName>Remote Work / Future of Work</fullName>
                <isActive>false</isActive>
                <label>Remote Work / Future of Work</label>
            </value>
            <value>
                <fullName>Social Impact - ESG</fullName>
                <isActive>false</isActive>
                <label>Social Impact - ESG</label>
            </value>
            <value>
                <fullName>Social Impact - Talent</fullName>
                <isActive>false</isActive>
                <label>Social Impact - Talent</label>
            </value>
            <value>
                <fullName>VC/Startup Ecosystem</fullName>
                <isActive>false</isActive>
                <label>VC/Startup Ecosystem</label>
            </value>
            <value>
                <fullName>Visa &amp; Relocation</fullName>
                <isActive>false</isActive>
                <label>Visa &amp; Relocation</label>
            </value>
            <value>
                <fullName>Work Tech</fullName>
                <isActive>false</isActive>
                <label>Work Tech</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>