force-app/main/default/objects/Lead/fields/Partner_Referral_Message__c.field-meta.xml
<CustomField>
    <fullName>Partner_Referral_Message__c</fullName>
    <description>Synced from Hubspot</description>
    <label>Partner Referral Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>